@@ -1,5 +1,10 @@
 2005-02-02  Mark McLoughlin  <mark@skynet.ie>
 
+	* lib/storage.py: test adding a new file after
+	installing.
+
+2005-02-02  Mark McLoughlin  <mark@skynet.ie>
+
 	* README: add bit about bug #154779
 	
 	* lib/storage.py:
